# speedwire

./: .clang-format  CMakeLists.txt  LICENSE  README.md  main.c  sonar-project.properties
.github/workflows/: build-and-test.yml  sonarcloud.yml
app/: CMakeLists.txt  main.c
inserter/: inserter.c  inserter.cmake  inserter.h
speedwire/: channel_lookup.c  speedwire.c  speedwire.cmake  speedwire.h
systemd/: speedwire.service
tests/: CMakeLists.txt  captured_packets.c  tests.c
